--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "illuminate/contracts": "^8.65|^9.0|^10.0",
         "livewire/livewire": "^2.0",
         "cviebrock/eloquent-sluggable": "^8.0|^9.0|^10.0",
-        "zofe/rapyd-livewire": "dev-master|^0.8",
+        "zofe/rapyd-livewire": "dev-main|^0.8",
         "zofe/rapyd-module-installer": "^0.0|^0.1",
         "zofe/layout-module": "dev-main|^0.0|^0.1"
     },
